# hiddenlayer-sdk-python

./: .gitignore  .pre-commit-config.yaml  .stats.yml  CHANGELOG.md  CODING_GUIDELINES.md  CONTRIBUTING.md  CONTRIBUTING_GUIDELINES.md  LICENSE  Makefile  README.md  SECURITY.md  api.md  mypy.ini  pyproject.toml  release-please-config.json
.github/: dependabot.yaml
.github/workflows/: ci.yml  codeql.yml  create-releases.yml  dependency-review.yml  generate-beta-endpoints.yml  patch-beta-warnings.yml  publish-jfrog.yml  publish-pypi.yml  python-package.yml  python-release.yml  release-doctor.yml  scorecard.yml
docs/: Makefile  make.bat  requirements.txt
docs/source/: api.rst  clients.rst  conf.py  data-models.rst  data_models.rst  example-usage.rst  example_usage.rst  getting-started.md  hiddenlayer.rest.api.rst  hiddenlayer.rest.rst  hiddenlayer.services.rst  index.rst  modules.rst  services.rst
examples/: aidr_predictive.py  demo.py  mldr.py  model_scanning.py
hiddenlayer/: __init__.py  constants.py  models.py  utils.py
hiddenlayer/rest/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
hiddenlayer/sdk/: constants.py  exceptions.py  models.py  utils.py
hiddenlayer/services/: mldr.py  model.py  model_scan.py  models.py
integration-tests/: test_enterprise.py  test_model.py  test_model_scanner.py
integration-tests/enterprise-modscan/: config.yaml  kind.yaml
scripts/: lint
scripts/utils/: generate-beta-endpoints.cjs  patch-beta-warnings.cjs  upload-artifact.sh
src/hiddenlayer/: __init__.py  _base_client.py  _client.py  _exceptions.py  _response.py  _streaming.py  _types.py  _version.py  pagination.py
src/hiddenlayer_sdk/: __init__.py  _base_client.py  _client.py  _resource.py  _response.py  _types.py  _version.py
tests/: conftest.py  test_beta.py  test_client.py  test_community_scan.py  test_deepcopy.py  test_extract_files.py  test_files.py  test_hiddenlayer.py  test_model_scan.py  test_models.py  test_qs.py  test_red_team_session.py  test_required_args.py  test_response.py  test_streaming.py  test_transform.py  test_utils.py  utils.py
tests/api_resources/: test_detection.py  test_interactions.py  test_models.py  test_prompt_analyzer.py  test_runtime.py  test_scans.py  test_sensors.py  test_vectors.py
tests/rest/: test_address.py  test_aidr_predictive_api.py  test_artifact.py  test_artifact_change.py  test_artifact_content.py  (+124 more)
(+471 files in other folders)
