[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.8"
name = "hiddenlayer"
description = "Official HiddenLayer Python SDK"
version = "0.1.0"
dependencies = [
  "requests",
  "pydantic>=2.0.0",
  "python-dateutil>=2.0.0",
  "numpy>=1.0.0",
]
readme = "README.md"
license = {file = "LICENSE"}

[project.optional-dependencies]
dev = [
  "ruff>=0.2.2",
  "pytest",
  "pandas"
]
aws = [
  "boto3>=1.0.0"
]

hf = [
  "huggingface_hub"
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
exclude = [".venv", "hiddenlayer/rest", "tests/rest"]
